example/errors/interpret/neg_array_size.box
set arr: [int; -34325324];
